2017-02-27  Marc A. Smith  <marc.smith@parodyne.com>

	added support for Dell PERC RAID controllers in the hw_raid_cli tool, and in the installation scripts (perccli tool); some code formatting and cleanup in the hw_raid_cli script

2017-02-25  Marc A. Smith  <marc.smith@parodyne.com>

	implemented all of the LVM dialogs in the TUI; tweaks/fixes in several other TUI dialogs

2017-02-23  Marc A. Smith  <marc.smith@parodyne.com>

	fixed the setup.bat script to handle Windows 10 in the win_binaries package (ext2fsd); added the dialogs and helper functions for the Software RAID menu... needs more testing; several fixes/tweaks in other TUI code

2017-02-21  Marc A. Smith  <marc.smith@parodyne.com>

	fixed an issue with extracting the CLI tool for 3DM2 controllers in both installer scripts; fixed a bug in the hw_raid_cli.py script (invalid StorCLI syntax); updated all of the Hardware RAID dialogs in the TUI to use the new hw_raid_cli.py script and removed other MegaRAID specific items (and other TUI code cleanup)

2017-02-15  Marc A. Smith  <marc.smith@parodyne.com>

	we now include the ESOS license file and change log in the image (/usr/share/doc/esos/); updated the copyright notice in all source files; added the acceptLicense() function which displays the ESOS license to the user, and asks them to accept; updated the aboutDialog() to include the copyright notice and warranty disclaimer

2017-02-12  Marc A. Smith  <marc.smith@parodyne.com>

	build fix (wrong path for bash detected) in the corosync recipe; fixed broken patch for cdk-5.0-20161210; updated grub.cfg to detect if using BIOS or EFI mode and only load modules that are for each platform, and fixed unicode.pf2 font location; updated the TUI code to call setCDKEntryBackgroundAttrib() for all CDKENTRY widgets

2017-02-08  Marc A. Smith  <marc.smith@parodyne.com>
