@@ -181,3 +181,4 @@ docutils
 tzdata
 nvme-cli
 freetype
+ledmon
