@@ -163,3 +163,4 @@ bb4ab8047159469add7d00910e203124  swig-3.0.10.tar.gz
 b5bfa8e658de7b481c001c1f6b330bcb  tzdata-2016i.tar.gz
 450b5c381c83df8f117824e7d0fe0076  nvme-cli-1.1.tar.gz
 be4601619827b7935e1d861745923a68  freetype-2.7.tar.bz2
+bb7368117320d8d2b2c9403f0f3530a2  ledmon-0.80.tar.gz
