@@ -163,3 +163,4 @@ c7db717810ab6965f66c8cf0398a98c9d8df982da39b4cd7f162911eb89596fa  docutils-0.12.
 f199171613ec2da757fe0a7523a58057c15e22d308cf0079c5c64459451e751a  tzdata-2016i.tar.gz
 22883719cbab86d52e8d4755e86ebd70476416e87442385a79b31c981bd60de1  nvme-cli-1.1.tar.gz
 d6a451f5b754857d2aa3964fd4473f8bc5c64e879b24516d780fb26bec7f7d48  freetype-2.7.tar.bz2
+5000b0114c82d04b0bebdfe205458c39eed19cd002868790b2fb498c26917128  ledmon-0.80.tar.gz
